<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button2"
        android:layout_width="242dp"
        android:layout_height="73dp"
        android:layout_marginTop="45dp"
        android:backgroundTint="@color/colorLogin"
        android:text="@string/profil_mahasiswa"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/catatan" />

    <Button
        android:id="@+id/wisata"
        android:layout_width="122dp"
        android:layout_height="73dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:backgroundTint="#6495ED"
        android:text="@string/wisata"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/kuliner"
        android:layout_width="122dp"
        android:layout_height="73dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"
        android:layout_weight="1"
        android:backgroundTint="#6495ED"
        android:text="@string/kuliner"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="229dp"
        android:layout_height="179dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="331dp"
        android:layout_height="135dp"
        android:layout_marginTop="40dp"
        android:text="@string/definisi_aplikasi"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/catatan"
        android:layout_width="130dp"
        android:layout_height="73dp"
        android:layout_marginTop="121dp"
        android:layout_weight="1"
        android:backgroundTint="#6495ED"
        android:text="@string/catatan"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>